# hypnofunk

./: .gitignore  CHANGELOG.md  GITHUB_SETUP.md  MANIFEST.in  PYPI_UPLOAD.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  setup.py  test_package.py
.github/workflows/: publish.yml
examples/: polyman_analysis.py
hypnofunk/: __init__.py  core.py  io.py  transitions.py  utils.py  visualization.py
tests/: test_core.py
